add base classes for machine VM and validation

--- a/OptiFabric/Views/Machines/EditMachine.cshtml
+++ b/OptiFabric/Views/Machines/EditMachine.cshtml
@@ -1,5 +1,5 @@
 @using OptiFabricMVC.Application.ViewModels.MachinesVM
-@model OptiFabricMVC.Application.ViewModels.MachinesVM.MachineDetailsVM
+@model EditMachineVM
 
 @{
     ViewBag.Title = "title";
