--- a/OptiFabric/Views/Product/Edit.cshtml
+++ b/OptiFabric/Views/Product/Edit.cshtml
@@ -1,5 +1,5 @@
 @using OptiFabricMVC.Application.ViewModels.ProductsVM
-@model OptiFabricMVC.Application.ViewModels.ProductsVM.ProductDetailsVM
+@model EditProductVM
 
 @{
     ViewBag.Title = "title";
