--- a/OptiFabric/Views/Machines/AddMachine.cshtml
+++ b/OptiFabric/Views/Machines/AddMachine.cshtml
@@ -1,5 +1,5 @@
 @using OptiFabricMVC.Application.ViewModels.MachinesVM
-@model OptiFabricMVC.Application.ViewModels.MachinesVM.MachinesForListVM
+@model OptiFabricMVC.Application.ViewModels.MachinesVM.AddNewMachineVM
 
 @{
     ViewBag.Title = "title";
