--- a/OptiFabric/Views/Job/ListJobEmployee.cshtml
+++ b/OptiFabric/Views/Job/ListJobEmployee.cshtml
@@ -36,7 +36,7 @@
                 <td>@job.CompletedQuantity</td>
                 <td>@job.MissingQuantity</td>
                 <td>@job.Efficiency%</td>
-                <td>@Html.ActionLink("Edytuj","EditJobEmployee",new {id=job.Id,jobId=job.JobId})</td>
+                <td>@Html.ActionLink("Edytuj","EditJobEmployee",new {id=job.Id,operationId=job.OperationId})</td>
 
 
             </tr>
