Add validation for JobEmployee, Product, Machine

--- a/OptiFabric/Views/Job/EditJobEmployee.cshtml
+++ b/OptiFabric/Views/Job/EditJobEmployee.cshtml
@@ -1,4 +1,4 @@
-@model OptiFabricMVC.Application.ViewModels.JobEmployeeVM.DetailsJobEmployeeVM
+@model OptiFabricMVC.Application.ViewModels.JobEmployeeVM.EditJobEmployeeVM
 
 @{
     ViewBag.Title = "title";
