--- a/OptiFabric/Views/Job/StartJob.cshtml
+++ b/OptiFabric/Views/Job/StartJob.cshtml
@@ -36,6 +36,7 @@
                 <form asp-action="StartJob" method="post">
                     <input type="hidden" name="selectedMachineId" value="@machine.Id" />
                     <input type="hidden" name="JobId" value="@Model.JobId" />
+                    <input type="hidden" name="operationId" value="@Model.OperationId" />
                     <button type="submit" class="btn btn-primary">Wybierz</button>
                 </form>
             </td>
