add_sorting_functionality

--- a/OptiFabric/Views/Job/EditJob.cshtml
+++ b/OptiFabric/Views/Job/EditJob.cshtml
@@ -1,6 +1,6 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @using OptiFabricMVC.Domain.Model
-@model OptiFabricMVC.Application.ViewModels.JobVM.AddNewJobVM
+@model OptiFabricMVC.Application.ViewModels.JobVM.EditJobVM
 
 @{
     ViewBag.Title = "title";
